compiler/fir/analysis-tests/testData/resolve/extendedCheckers/RedundantCallOfConversionMethod/string.kt
// WITH_RUNTIME
val foo = "".<!REDUNDANT_CALL_OF_CONVERSION_METHOD!>toString()<!>